--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,12 +18,12 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: 
+      - name: cua843-site
         uses: actions/checkout@v4
       - name: cua843.github.io
         uses: withastro/action@v3
         with:
-          path: . # The root location of your Astro project inside the repository. (optional)
+          path: ./cua843-site # The root location of your Astro project inside the repository. (optional)
           node-version: 23 # The specific version of Node that should be used to build your site. Defaults to 20. (optional)
           package-manager: pnpm@latest # The Node package manager that should be used to install dependencies and build your site. Automatically detected based on your lockfile. (optional)
 
