--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,7 @@ jobs:
       - name: cua843.github.io
         uses: withastro/action@v3
         with:
-          path: cua843-site # The root location of your Astro project inside the repository. (optional)
+          path: . # The root location of your Astro project inside the repository. (optional)
           node-version: 23 # The specific version of Node that should be used to build your site. Defaults to 20. (optional)
           package-manager: pnpm@latest # The Node package manager that should be used to install dependencies and build your site. Automatically detected based on your lockfile. (optional)
 
